fix: Fixed exception due to unmodifiable widget list.